<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="btnSearchMain" type="id"/>
    <item name="btnFavoriteMain" type="id"/>
</resources>